Add show bsbi spimi result on frontend

--- a/hw5/hw_server/search_engine/templates/search_engine/hw5.html
+++ b/hw5/hw_server/search_engine/templates/search_engine/hw5.html
@@ -146,11 +146,11 @@
         {#        left tf #}
         document.getElementById('l_tf_1').addEventListener('click', function () {
             document.getElementById('l_tf_word').innerHTML = "sorted by tf";
-            l_tf = 0;
+            l_tf = 1;
         });
         document.getElementById('l_tf_2').addEventListener('click', function () {
             document.getElementById('l_tf_word').innerHTML = "not sorted by tf";
-            l_tf = 1;
+            l_tf = 0;
         });
         {#left idf#}
         document.getElementById('l_method_1').addEventListener('click', function () {
@@ -164,11 +164,11 @@
         {# right tf #}
         document.getElementById('r_tf_1').addEventListener('click', function () {
             document.getElementById('r_tf_word').innerHTML = "sorted by tf";
-            r_tf = 0;
+            r_tf = 1;
         });
         document.getElementById('r_tf_2').addEventListener('click', function () {
             document.getElementById('r_tf_word').innerHTML = "not sorted by tf";
-            r_tf = 1;
+            r_tf = 0;
         });
         {# right method #}
         document.getElementById('r_method_1').addEventListener('click', function () {
@@ -188,36 +188,44 @@
             // get input keyword
             const keyword = $('[id="keyword"]').val();
 
-            var controller_url;
-            if(cos_sim === 0) controller_url = "/search_engine/tfidf";
-            else controller_url = "/search_engine/create_tfidf_vec"
+            // left
             $.ajax({
-                url: controller_url,
+                url: "/search_engine/hw5_search",
                 type: 'POST',
-                data:{keyword:keyword, l_bsbi_spimi: l_method, l_tf: l_tf, r_bsbi_spimi: r_method, r_tf: r_tf},
+                data:{keyword:keyword, bsbi_spimi: l_method, tf: l_tf},
                 success: function (data) {
                     var l_list = document.getElementById("l_title_list");
-                    var r_list = document.getElementById("r_title_list");
 
-                    for (i=0;i<data['l_titles'].length;i++){
+                    for (i=0;i<10;i++){
                         l_list.innerHTML += '<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">\n' +
                             '                                <div class="d-flex w-100 justify-content-between">\n' +
-                            '                                  <small>query term weight/cos_similarity:' + data['l_weights'][i] + '</small>\n' +
-                            '                                  <small>doc len:' + data['l_len'][i] + '</small>\n' +
-                            '                                  <small>paragraph:' + data['lpara'][i] + '</small>\n' +
+                            '                                  <small>query term freq:' + data['weights'][i] + '</small>\n' +
                             '                                </div>\n' +
-                            '                                <p class="mb-1">' + data['l_titles'][i] + '</p>\n' +
+                            '                                <p class="mb-1">' + data['titles'][i] + '</p>\n' +
+                            '                               <small>'+ data['abstract'][i] + '</small>' +
                             '                              </a>';
                     }
+                },
+                error: function () {
+                    alert("query failed")
+                }
+            });
 
-                    for (i=0;i<data['r_titles'].length;i++){
+            // right
+            $.ajax({
+                url: "/search_engine/hw5_search",
+                type: 'POST',
+                data:{keyword:keyword, bsbi_spimi: r_method, tf: r_tf},
+                success: function (data2) {
+                    var r_list = document.getElementById("r_title_list");
+
+                    for (i=0;i<10;i++){
                         r_list.innerHTML += '<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">\n' +
                             '                                <div class="d-flex w-100 justify-content-between">\n' +
-                            '                                  <small>query term weight/cos_similarity:' + data['r_weights'][i] + '</small>\n' +
-                            '                                  <small>doc len:' + data['r_len'][i] + '</small>\n' +
-                            '                                  <small>paragraph:' + data['rpara'][i] + '</small>\n' +
+                            '                                  <small>query term freq:' + data2['weights'][i] + '</small>\n' +
                             '                                </div>\n' +
-                            '                                <p class="mb-1">' + data['r_titles'][i] + '</p>\n' +
+                            '                                <p class="mb-1">' + data2['titles'][i] + '</p>\n' +
+                            '                               <small>'+ data2['abstract'][i] + '</small>' +
                             '                              </a>';
                     }
                 },
